# vortex-method-program

./: Cargo.toml  README.md  build.rs
resources/gpu_methods/: get_velocity.glsl
resources/models/: arrow.glb  boundary.glb  boundary_3.glb  boundary_5.glb  boundary_7.glb  boundary_cube.glb  cube_3_n.glb  cube_4_n.glb  foci.glb  gomb.glb  sphere_3.glb  sphere_4.glb  sphere_6.glb
resources/models/car/: car_0_n.glb
resources/models/cube/: boundary_cube_2.glb
resources/models/cube_normal/: cube_normal_3_n_4.glb
resources/models/cube_random/: boundary_cube_random_1.glb  boundary_cube_random_2.glb  boundary_cube_random_3.glb  (+1 more)
resources/shaders/: boundary_info_stepper.comp  boundary_mesh.frag  boundary_vortex.frag  boundary_vortex.vert  boundary_vortex_correction.comp  boundary_vortex_error.comp  boundary_vortex_zero.comp  cube.comp  cube.frag  cube.vert  particle.comp  particle.frag  particle.vert  particle_sort.comp  test_sphere.frag  test_sphere.vert  vortex.comp  vortex.frag  vortex.vert
src/: compute_shader_program.rs  extensions.rs  geometry.rs  main.rs  objects.rs  shader_program.rs  structures.rs  support.rs  traits.rs  util.rs
src/extensions/: matrix_extension.rs
src/objects/: active_vorticies.rs  boundary_info_stepper.rs  boundary_mesh.rs  boundary_vorticies.rs  cube_geometry.rs  particles.rs  scene.rs  test_sphere.rs  texture.rs
src/structures/: computed_inverse.rs  cube.rs  particle.rs  ray.rs  vortex.rs
src/support/: camera.rs  file.rs  magnitude_statistics.rs
src/test/: tests.rs
src/traits/: collider.rs  drawable.rs  object.rs  steppable.rs
(+3 files in other folders)
