[package]
name = "vortex-bery"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bytemuck = "1"
cgmath = "0.18.0"
imagine = "0.5.1"
rand = "0.8.5"
glfw = "0.53.0"
log = "0.4.20"
easy-gltf = "1.1.0"
nalgebra = {version = "0.32.3", features = ["serde-serialize"]}
criterion = "0.5.1"
itertools = "0.11.0"
prettytable = "0.10.0"
image = "0.24.7"
all_asserts = "2.3.1"
crc32fast = "1.3.2"
serde = "1.0.192"
serde-binary = "0.5.0"
postcard = "1.0.8"
heapless = "0.8.0"
serde_json = "1.0.108"

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"
